# volt

./: .gitignore  .tmp_vkrenderer_clean.cpp  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
assets/: manifest.json  manifest.txt
assets/images/: manifest.txt
assets/shaders/: msdfgen.comp  scaffold.frag  scaffold.vert  text.frag  ui.vert  ui_text_sdf.frag
assets/shaders/text/: README.md  bin_count.comp  bin_emit.comp  exclusive_scan.comp  fine.comp  flatten.comp  flatten_count.comp  flatten_emit.comp  line_count.comp  prefix_scan.comp  shared.glsl
assets/ui/: default.style
cmake/: CompilerWarnings.cmake
docs/: architecture.md  bugs.md
include/volt/core/: AppConfig.hpp  Logging.hpp  Text.hpp  Timer.hpp
include/volt/event/: Event.hpp  EventDispatcher.hpp  EventType.hpp
include/volt/io/: IModelImporter.hpp  ImageAssets.hpp  ImageCodec.hpp  ImportPipeline.hpp  ImportTypes.hpp  ImporterRegistry.hpp  Json.hpp  StepImporter.hpp  ThreeMfImporter.hpp
include/volt/io/assets/: AssetManager.hpp  AssetTypes.hpp  Assets.hpp  Font.hpp  FontAssetService.hpp  FontIO.hpp  ImageAssetService.hpp  Manifest.hpp  ModelAssetService.hpp
include/volt/io/compression/: Compression.hpp  DeflateCodec.hpp  HuffmanCodec.hpp
include/volt/io/image/: Image.hpp  ImageDecoder.hpp  ImageEncoder.hpp  ImageTypes.hpp
include/volt/io/import/: IModelImporter.hpp  Import.hpp  ImportPipeline.hpp  ImportTypes.hpp  ImporterRegistry.hpp  StepImporter.hpp  ThreeMfImporter.hpp
include/volt/io/manifest/: IManifestSubscriber.hpp  Manifest.hpp  ManifestLoader.hpp
include/volt/io/text/: Json.hpp  TextIO.hpp  Utf.hpp
include/volt/math/: CoordinateSpace.hpp  Math.hpp  MathCommon.hpp  Matrix.hpp  Projection.hpp  Quaternion.hpp  Transform.hpp  Units.hpp  Validation.hpp  Vector.hpp
include/volt/physics/: Electrical.hpp  Physics.hpp  SpiceModels.hpp  SpiceNetlist.hpp  SpiceSimulation.hpp  SpiceStamping.hpp  SpiceTypes.hpp
include/volt/platform/: InputState.hpp  Window.hpp  WindowBackend.hpp  WindowBackendFactory.hpp
include/volt/platform/details/: LinuxWindowBackend.hpp  MacOSWindowBackend.hpp  Win32WindowBackend.hpp
include/volt/render/: Renderer.hpp  RendererFactory.hpp  VulkanRenderer.hpp
include/volt/render/details/: VectorTextWorker.hpp  VulkanRenderer.hpp
include/volt/services/: ImageService.hpp  ServiceRegistry.hpp
include/volt/ui/: UILayer.hpp  UIMesh.hpp  UIRenderTypes.hpp  UIResources.hpp  UIStyle.hpp  UIText.hpp  Widgets.hpp
scripts/linux/: bootstrap.sh  setup.sh
scripts/windows/: bootstrap.ps1  setup.ps1
src/: CMakeLists.txt
src/app/: AppUi.cpp  AppUi.hpp  main.cpp  setup_app.hpp
src/core/: AppConfig.cpp  Logging.cpp  Text.cpp
src/event/: EventDispatcher.cpp
src/io/: ImageAssets.cpp  ImageCodec.cpp  ImportPipeline.cpp  ImporterRegistry.cpp  Manifest.cpp  StepImporter.cpp  ThreeMfImporter.cpp
src/io/assets/: AssetManager.cpp  Font.cpp  FontAssetService.cpp  ImageAssetService.cpp  Manifest.cpp  ModelAssetService.cpp  SfntFontAtlas.cpp  SfntFontAtlas.hpp
src/io/compression/: BitStream.hpp  CanonicalHuffman.cpp  CanonicalHuffman.hpp  DeflateCodec.cpp  DeflateHuffman.cpp  DeflateHuffman.hpp  HuffmanCodec.cpp  ZlibEnvelope.cpp  ZlibEnvelope.hpp
src/io/image/: BmpCodec.cpp  BmpCodec.hpp  CodecShared.hpp  ImageDecoder.cpp  ImageEncoder.cpp  JpegCodec.cpp  JpegCodec.hpp  PngCodec.cpp  PngCodec.hpp
src/io/import/: ImportPipeline.cpp  ImporterRegistry.cpp  StepImporter.cpp  ThreeMfImporter.cpp
src/io/text/: Json.cpp  Utf.cpp
src/math/: Math.cpp
src/physics/: Physics.cpp
src/platform/: Window.cpp  WindowBackendFactory.cpp
src/platform/details/: LinuxWindowBackend.cpp  MacOSWindowBackend.cpp  Win32WindowBackend.cpp  Win32WindowBackendStartup.hpp
src/render/: RendererFactory.cpp  VulkanRenderer.cpp
src/render/details/: VectorTextWorker.cpp  VulkanRenderer.cpp  VulkanRenderer.cpp.orig
src/ui/: UILayer.cpp  UIMesh.cpp  UIStyle.cpp  UIText.cpp
tests/: CMakeLists.txt
tests/core/: AppConfigTests.cpp  TextTests.cpp
tests/io/assets/: FontCodecTests.cpp  FontGpuAtlasRenderTests.cpp  SfntFontAtlasBenchmark.cpp
tests/io/compression/: CompressionTests.cpp  HuffmanCodecBenchmark.cpp  HuffmanCodecTests.cpp
tests/io/image/: ImageCodecTests.cpp  JpegPerformanceTests.cpp
tests/io/text/: JsonTests.cpp  UtfTests.cpp
tests/platform/: Win32WindowBackendTests.cpp
tests/ui/: UILayerTests.cpp
